--- a/valentine.html
+++ b/valentine.html
@@ -87,7 +87,7 @@ button {
 
 <div class="card">
 
-    <div class="emoji">🐱❤️</div>
+    <div class="emoji">🐱</div>
 
     <h1>Will you be my Valentine?</h1>
 
